# parallel_pso

./: .gitignore  README.md
configs/: breast-cancer.csv  convex.csv  griewank.csv  ionosphere.csv  rastrigrin.csv  rosenbrock.csv
src/: .gitignore  CMakeLists.txt  FindOpenCL.cmake  base_config.h  base_pso.h  cl_config.h  cpu_config.cpp  cpu_config.h  cuda_config.cu  cuda_config.cuh  cuda_pso.cu  cuda_pso.cuh  logger.h  main.cpp  opencl_z_pso.cl  opencl_z_pso.h  openmp_pso.h  openmp_teams_pso.h  serial_pso.h  stopwatch.h  types_cpu_only.h  types_general.h
src/OpenCL/: README
